--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="styles/bundle.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:300,400,600,700|Playfair+Display:400,700,900" rel="stylesheet">
 </head>
 <body>
   <div id="root">
 
   </div>
-<script type="text/javascript" src="scripts/app.js"></script>
-  
+<script type="text/javascript" src="scripts/bundle.js"></script>
+
 </body>
 </html>
