--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:300,400,600,700|Playfair+Display:400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Princess+Sofia|Bilbo" rel="stylesheet">
 </head>
 <body>
   <div id="root">
