changing to bolt

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Princess+Sofia|Bilbo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 </head>
 <body>
   <div id="root">
