--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <div id="root">
