--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
   <div id="root">
-
+    
   </div>
-<script type="text/javascript" src="scripts/bundle.js"></script>
+  <script type="text/javascript" src="scripts/bundle.js"></script>
+  <script src="http://localhost:35729/livereload.js"></script>
 
 </body>
 </html>
