--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
   <link rel="manifest" href="/manifest.json">
 </head>
 <body>
